--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "element-ui-type",
-  "version": "1.0.12",
+  "version": "1.0.13",
   "description": "element-ui type for vue language tools@3",
   "main": "index.ts",
   "type": "module",
@@ -34,7 +34,6 @@
   },
   "peerDependencies": {
     "element-ui": "*",
-    "vue": "^2.7.0",
-    "vue-tsc": "^3.0.3"
+    "vue": "^2.7.0"
   }
 }
